// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rubyMerge renders 0 1`] = `
Array [
  .c0 {
  ruby-merge: 0;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: 0;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: 0;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyMerge renders function 1`] = `
Array [
  .c0 {
  ruby-merge: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: has;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: has;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyMerge renders invalid theme path 1`] = `
Array [
  .c0 {
  ruby-merge: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyMerge renders negative number 1`] = `
Array [
  .c0 {
  ruby-merge: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyMerge renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    ruby-merge: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-merge: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-merge: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-merge: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    ruby-merge: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-merge: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-merge: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-merge: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    ruby-merge: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-merge: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-merge: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-merge: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    ruby-merge: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-merge: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    ruby-merge: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    ruby-merge: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rubyMerge renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    ruby-merge: July;
  }
}

@media April {
  .c0 {
    ruby-merge: August;
  }
}

@media January {
  .c0 {
    ruby-merge: September;
  }
}

@media April {
  .c0 {
    ruby-merge: November;
  }
}

@media June {
  .c0 {
    ruby-merge: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    ruby-merge: July;
  }
}

@media April {
  .c0 {
    ruby-merge: August;
  }
}

@media January {
  .c0 {
    ruby-merge: September;
  }
}

@media April {
  .c0 {
    ruby-merge: November;
  }
}

@media June {
  .c0 {
    ruby-merge: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    ruby-merge: January;
  }
}

@media April {
  .c0 {
    ruby-merge: December;
  }
}

@media January {
  .c0 {
    ruby-merge: April;
  }
}

@media April {
  .c0 {
    ruby-merge: May;
  }
}

@media June {
  .c0 {
    ruby-merge: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    ruby-merge: January;
  }
}

@media April {
  .c0 {
    ruby-merge: December;
  }
}

@media January {
  .c0 {
    ruby-merge: April;
  }
}

@media April {
  .c0 {
    ruby-merge: May;
  }
}

@media June {
  .c0 {
    ruby-merge: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`rubyMerge renders postitive number 1`] = `
Array [
  .c0 {
  ruby-merge: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyMerge renders string 1`] = `
Array [
  .c0 {
  ruby-merge: July;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: July;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: June;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: June;
}

<div
    className="c0"
  />,
]
`;

exports[`rubyMerge renders valid theme path 1`] = `
Array [
  .c0 {
  ruby-merge: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  ruby-merge: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
